# coursework3

./: .gitignore  README.md  config.py  main.py  pyproject.toml  sample.database.ini
json/: all_vacancies.json  companies_and_vacancies_count.json  vacancies_with_higher_salary.json  vacancies_with_keyword.json  vacancy.json
src/: classAPI.py  db_manager.py  employer_id.py
