[project]
name = "coursework3"
version = "0.1.0"
description = ""
authors = [
    {name = "Kulsitova",email = "kulsitovakarina@gmail.com "}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
